--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -3,7 +3,11 @@ body{
   font-family: sans-serif; 
   color: #ff5dbd;
   text-align: center;
+  padding: 0;
+  margin: 0;
 }
+a{color: inherit;}
+span{font-size: 0.8em; margin: 1.5em; display: inline-block; position: absolute; bottom: 10px; right: 10px;}
 .container{
   display: block;
   margin: 0 auto;
