--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,20 @@ body {
   background: #3f3440;
   font-family: sans-serif;
   color: #ff5dbd;
-  text-align: center; }
+  text-align: center;
+  padding: 0;
+  margin: 0; }
+
+a {
+  color: inherit; }
+
+span {
+  font-size: 0.8em;
+  margin: 1.5em;
+  display: inline-block;
+  position: absolute;
+  bottom: 10px;
+  right: 10px; }
 
 .container {
   display: block;
