--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -5,6 +5,7 @@ body{
   text-align: center;
   padding: 0;
   margin: 0;
+  transition: all 0.25s;
 }
 a{color: inherit;}
 span{font-size: 0.8em; margin: 1.5em; display: inline-block; position: absolute; bottom: 10px; right: 10px;}
@@ -15,14 +16,15 @@ span{font-size: 0.8em; margin: 1.5em; display: inline-block; position: absolute;
 }
 #game-canvas{
   box-shadow: 0px 0px 15px 0px #ff5dbd;
-  -webkit-animation: pulse 0.45s infinite; /* Safari 4+ */
-  -moz-animation:    pulse 0.45s infinite; /* Fx 5+ */
-  -o-animation:      pulse 0.45s infinite; /* Opera 12+ */
-  animation:         pulse 0.45s infinite; /* IE 10+, Fx 29+ */
+  -webkit-animation: pulse 0.45s infinite; 
+  -moz-animation:    pulse 0.45s infinite; 
+  -o-animation:      pulse 0.45s infinite; 
+  animation:         pulse 0.45s infinite; 
 }
+
 @-webkit-keyframes pulse {
   0%   {box-shadow: 0px 0px 15px 0px #ff5dbd;}
-  50%  { box-shadow: 0px 0px 35px 0px #ff5dbd; }
+  50%  { box-shadow: 0px 0px 25px 0px #ff5dbd; }
   100% {box-shadow: 0px 0px 15px 0px #ff5dbd;}
 }
 @-moz-keyframes pulse {
