--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ body {
   color: #ff5dbd;
   text-align: center;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  transition: all 0.25s; }
 
 a {
   color: inherit; }
@@ -25,19 +26,15 @@ span {
 #game-canvas {
   box-shadow: 0px 0px 15px 0px #ff5dbd;
   -webkit-animation: pulse 0.45s infinite;
-  /* Safari 4+ */
   -moz-animation: pulse 0.45s infinite;
-  /* Fx 5+ */
   -o-animation: pulse 0.45s infinite;
-  /* Opera 12+ */
-  animation: pulse 0.45s infinite;
-  /* IE 10+, Fx 29+ */ }
+  animation: pulse 0.45s infinite; }
 
 @-webkit-keyframes pulse {
   0% {
     box-shadow: 0px 0px 15px 0px #ff5dbd; }
   50% {
-    box-shadow: 0px 0px 35px 0px #ff5dbd; }
+    box-shadow: 0px 0px 25px 0px #ff5dbd; }
   100% {
     box-shadow: 0px 0px 15px 0px #ff5dbd; } }
 @-moz-keyframes pulse {
