--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,900italic,900);
+
 body{
   background: #3f3440; 
   font-family: sans-serif; 
